--- a/xla/service/cpu/BUILD
+++ b/xla/service/cpu/BUILD
@@ -238,6 +238,7 @@ cc_library(
         "//xla:util",
         "//xla:xla_data_proto_cc",
         "//xla:xla_proto_cc",
+        "//xla/hlo/experimental/auto_sharding:auto_sharding",
         "//xla/hlo/ir:hlo",
         "//xla/hlo/ir:hlo_module_group",
         "//xla/mlir_hlo",
