Logging number of shardings

--- a/xla/hlo/experimental/auto_sharding/BUILD
+++ b/xla/hlo/experimental/auto_sharding/BUILD
@@ -137,6 +137,7 @@ cc_library(
     hdrs = [
         "auto_sharding_solver.h",
         "auto_sharding_strategy.h",
+        "fix_log.h"
     ],
     compatible_with = get_compatible_with_libtpu_portable(),
     deps = [
